--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Property</title>
+    <title>
+      KRYSTELLE ROMY RESIDENCE
+    </title>
   </head>
   <body>
     <div id="root"></div>
